		Activities: fixed bug which cut one student off print view of attendance print out
		Activities: fixed translation of blank string in Parent Dashboard Activity view
		Activities: removed stand along activity copy functionality
		Activities: interface string fix in activity edit screen
		Activities: fixed Back button level skip issue when managing enrolment
		Attendance: added new filters to student absence reports to allow sorting by roll group or student
		Attendance: added ability to set partial per-class future absence
		Attendance: added visual graphing for school-wide Attendance Trends
		Attendance: improved the display of Classes/Roll Groups Not Registered to include visual overview
		Attendance: updated Daily Incomplete Email CLI script to include attendance by class
		Attendance: colspan fix in attendance report for roll groups
		Attendance: tweaked interface language to improve handling of plurals
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Finance: removed thousand separator from invoice bulk export
		Finance: switched from JS to HTML for fee block placeholders
		Finance: added option to output name on invoice/receipt as student official name, rather than preferredName+surname
		Finance: fixed bug in Paid - Partial filter in invoice manage view
		Finance: added filter by fee category in invoice manage view
		Individual Needs: added template settings for pre-filling fields on new IEPs
		Individual Needs: fixed permission issue on summary page
		Library: reduced memory usage of Library browse page
		Markbook: added settings to enable/disable Effort and Rubrics
		Markbook: fixed bug preventing Learning Area rubric selection when course is associated with multiple year groups