@@ -33,10 +33,11 @@ $gibbonSchoolYearIDCopyTo = null ;
 if (isset($_POST['gibbonSchoolYearIDCopyTo']))
     $gibbonSchoolYearIDCopyTo = $_POST['gibbonSchoolYearIDCopyTo'];
 $action = $_POST['action'];
+$search = $_POST['search'];
 
 if (($gibbonSchoolYearIDCopyTo == '' and $action != 'Delete') or $action == '') { echo 'Fatal error loading this page!';
 } else {
-    $URL = $_SESSION[$guid]['absoluteURL'].'/index.php?q=/modules/'.getModuleName($_POST['address'])."/activities_manage.php";
+    $URL = $_SESSION[$guid]['absoluteURL'].'/index.php?q=/modules/'.getModuleName($_POST['address'])."/activities_manage.php&search=$search";
 
     if (isActionAccessible($guid, $connection2, '/modules/Activities/activities_manage.php') == false) {
         $URL .= '&return=error0';
